@@ -1,3 +1,12 @@
+2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/WidgetEditSession.cs: Clone the widget library list from
+	  the master project since the list is cleared when the copy project
+	  is closed.
+	* libstetic/ObjectWrapper.cs, libstetic/wrapper/Button.cs,
+	  libstetic/PropertyDescriptor.cs, libstetic/WidgetUtils.cs: Properly
+	  generate translatable properties.
+
 2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libstetic/editor/SelectImageDialog.cs,
